fixed visibility of comments

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -82,7 +82,6 @@ footer {
 
 textarea {
     border-radius: 7px;
-    display: none;
     padding: 7px;
     height: 150px;
 }
